--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -14,6 +14,7 @@
         <module>eureka-server</module>
         <module>author-lookup-service</module>
         <module>api-gateway</module>
+        <module>order-pricing-service</module>
     </modules>
 
     <properties>
